@@ -192,6 +192,18 @@ public interface JdbcOperations {
 	 */
 	int queryForInt(String sql, final Object[] args) throws DataAccessException;
 
+	
+	//-------------------------------------------------------------------------
+	// Execute methods
+	//-------------------------------------------------------------------------
+
+	/**
+	 * Issue a single SQL execute.
+	 * @param sql static SQL to execute
+	 * @throws DataAccessException if there is any problem.
+	 */
+	void execute(final String sql) throws DataAccessException;
+
 
 	//-------------------------------------------------------------------------
 	// Update methods
@@ -281,6 +293,6 @@ public interface JdbcOperations {
 	 * @return Map of extracted out parameters
 	 * @throws DataAccessException if there is any problem issuing the update
 	 */
-	Map execute(CallableStatementCreator csc, List declaredParameters) throws DataAccessException;
+	Map call(CallableStatementCreator csc, List declaredParameters) throws DataAccessException;
 	
 }
