@@ -34,6 +34,8 @@ Package org.springframework.ejb
 * moved logger instance from AbstractEnterpriseBean to AbstractStatelessSession Bean and AbstractMessageDrivenBean
 
 Package org.springframework.jdbc
+* added "execute(String sql) method to support static sql and ddl statements
+* renamed method "execute(CallableStatementCreator csc, List declaredParameters)" to call 
 * added support for new SQL error code categories: DataRetrieval/OptimisticLocking/DataAccessResourceFailureException
 * added overloaded query methods to JdbcTemplate, allowing to pass in prepared statement arguments as Object array
 * added queryForList/queryForObject/queryForInt methods to JdbcTemplate class and JdbcOperations interface
